=======
CHANGES
=======

3.4.4 (unreleased)
------------------

- Fix test failures due to Content-Disposition header capitalization
  differences.

- Pin dependency versions to Zope 3.4 KGS, because the 3.4 series of
  zope.testbrowser doesn't work with newer versions of, e.g. zope.component.

3.4.3 (2008-10-13)
------------------

- backported fix for #149517 from 3.5 (explicitly depend on zope.interface and
  zope.schema)

3.4.2 (2007-10-31)
------------------

- Resolve ``ZopeSecurityPolicy`` deprecation warning.

3.4.1 (2007-09-01)
------------------

* Updated to mechanize 0.1.7b and ClientForm 0.2.7.  These are now
  pulled in via egg dependencies.

* ``zope.testbrowser`` now works on Python 2.5.

3.4.0 (2007-06-04)
------------------

* Added the ability to suppress raising exceptions on HTTP errors
  (``raiseHttpErrors`` attribute).

* Made the tests more resilient to HTTP header formatting changes with
  the REnormalizer.

3.4.0a1 (2007-04-22)
--------------------

Initial release as a separate project, corresponds to zope.testbrowser
from Zope 3.4.0a1